@@ -387,6 +387,7 @@ message.button.ok=OK
 message.button.cancel=Cancel
 
 message.areyousuredelete=Are you sure you want to delete these following files?%s
+andOtherFiles=...and %d other files
 
 downloadInProgress=There are some downloads in progress.\nTransfer will be cancelled.\nAre you sure you want to exit the application?
 
