@@ -50,6 +50,8 @@ refreshProxyList.Action.shortDescription=Refresh the list of proxies
 refreshProxyList.Action.smallIcon=${iconsPath}refresh_proxy_list.png
 refreshProxyList.Action.accelerator=
 
+andOtherFiles=...and %d other files
+
 UserPreferencesDialog.properties
 ====================================
 New:
